--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - checkout
 
-      - run: npm install -g testcafe
+      - run: sudo npm install -g testcafe
 
       # run tests!
       - run: testcafe chrome tests.js
