--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - checkout
-      - run: ls
+      - run: cd /tests/ui/
       - run: sudo npm install -g testcafe
 
       # run tests!
