--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - checkout
+      - run: pwd
+      - run: ls
       - run: cd tests/ui/
       - run: sudo npm install -g testcafe
 
