--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,28 @@
 # https://circleci.com/docs/2.0/sample-config/
+# https://circleci.com/docs/2.0/language-java-maven/
 version: 2
 jobs:
+
   api_test:
     docker:
       # mvn
-      - image: maven:latest
+      - image: circleci/openjdk:8-jdk-stretch
     steps:
       - checkout
+
+      - restore_cache: # restore the saved cache after the first run or if `pom.xml` has changed
+      # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: avaeroh.github.io-{{ checksum "pom.xml" }}
+
+      - run: mvn dependency:go-offline # gets the project dependencies
+
+      - save_cache: # saves the project dependencies
+          paths:
+            - ~/.m2
+          key: avaeroh.github.io-{{ checksum "pom.xml" }}
+
       - run: mvn -f .tests/API clean verify
+
   testcafe:
     docker:
       # testcafe
@@ -15,6 +30,7 @@ jobs:
     steps:
       - checkout
       - run: testcafe chrome tests/UI/tests.js
+
 workflows:
   version: 2
   test:
