--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 # https://circleci.com/docs/2.0/sample-config/
 # https://circleci.com/docs/2.0/language-java-maven/
 version:                 2
-# jobs:
-   api_test:
+jobs:
+   build:
      working_directory:  ~/avaeroh.github.io # directory where steps will run
 
      docker:
@@ -24,20 +24,20 @@ version:                 2
 
        - run:            mvn -f .tests/API clean verify
 
-  testcafe:
-    docker:
-      # testcafe
-      - image:           testcafe/testcafe
-    steps:
-      - checkout
-      - run:             testcafe chrome tests/UI/tests.js
-
-workflows:
-  version:               2
-  test:
-    jobs:
-      - api_test
-      - testcafe
+#   testcafe:
+#     docker:
+#       # testcafe
+#       - image:         testcafe/testcafe
+#     steps:
+#       - checkout
+#       - run:           testcafe chrome tests/UI/tests.js
+#
+# workflows:
+#   version:             2
+#   test:
+#     jobs:
+#       - api_test
+#       - testcafe
 
 
 # version:               2
