--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,13 @@
 # https://circleci.com/docs/2.0/sample-config/
 # https://circleci.com/docs/2.0/language-java-maven/
 version:                 2.1
-jobs:
-   build:
+   api_test:
      working_directory:  ~/avaeroh.github.io/tests/API # directory where steps will run
      - run:              ls -la
 
      docker:
        # mvn
        - image:          circleci/openjdk:8-jdk-stretch
-
      steps:
        - checkout
 
