--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,20 +12,20 @@ jobs:
        - checkout
        - run:            ls -la
        - run:            pwd
-       - run:            cd ~/avaeroh.github.io/tests/API/tests
+       - run:            cd ~/avaeroh.github.io/tests/API
        - restore_cache:  # restore the saved cache after the first run or if `pom.xml` has changed
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key:           avaeroh.github.io-{{ checksum "./tests/API/pom.xml" }}
+          key:           avaeroh.github.io-{{ checksum "pom.xml" }}
 
        - run:            mvn dependency:go-offline # gets the project dependencies
 
        - save_cache:     # saves the project dependencies
           paths:
             - ~/.m2
-          key:           avaeroh.github.io-{{ checksum "./tests/API/pom.xml" }}
+          key:           avaeroh.github.io-{{ checksum "pom.xml" }}
        - run:            ls -la
        - run:            pwd
-       - run:            cd ~/avaeroh.github.io/tests/API/tests          
+       - run:            cd ~/avaeroh.github.io/tests/API/tests
        - run:            mvn clean verify
 
  # testcafe:
