--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
        #      - ~/.m2
        #    key:           avaeroh.github.io-{{ checksum "tests/API/pom.xml" }}
 
-       - run:            mvn clean verify
+       - run:            mvn -f ./tests/API clean verify
 
  # testcafe:
  #    docker:
