--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,18 @@ jobs:
        - run:            ls -la
        - run:            pwd
        # - run:          cd ~/avaeroh.github.io/tests/API
-       # - restore_cache:  # restore the saved cache after the first run or if `pom.xml` has changed
+       - restore_cache:  # restore the saved cache after the first run or if `pom.xml` has changed
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-       #    key:           avaeroh.github.io-{{ checksum "tests/API/pom.xml" }}
+          key:           avaeroh.github.io-{{ checksum "tests/API/pom.xml" }}
        # - run:            ls -la
        # - run:            pwd
 
-       # - run:            mvn dependency:go-offline # gets the project dependencies
+       - run:            mvn dependency:go-offline # gets the project dependencies
 
-       # - save_cache:     # saves the project dependencies
-       #    paths:
-       #      - ~/.m2
-       #    key:           avaeroh.github.io-{{ checksum "tests/API/pom.xml" }}
+       - save_cache:     # saves the project dependencies
+          paths:
+            - ~/.m2
+          key:           avaeroh.github.io-{{ checksum "tests/API/pom.xml" }}
 
        - run:            mvn -f ./tests/API clean verify
 
