--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,9 @@ jobs:
        # - run:          mvn dependency:go-offline # gets the project dependencies
 
        # - save_cache:   # saves the project dependencies
-          paths:
-            - ~/.m2
+          # paths:
+          #   - ~/.m2
           # key:           avaeroh.github.io-{{ checksum "./tests/API/pom.xml" }}
-
        - run:            mvn -f ./tests/API clean verify
 
  # testcafe:
