--- a/tests/API/pom.xml
+++ b/tests/API/pom.xml
@@ -1,54 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>RestAssuredAvaeroh</groupId>
-    <artifactId>RestAssuredAvaeroh</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>RestAssuredAvaeroh</groupId>
+  <artifactId>RestAssuredAvaeroh</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <version>3.2.0</version>
-            <scope>test</scope>
-        </dependency>
+  <dependencies>
+    <!-- junit 5, unit test -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>3.2.0</version>
+      <scope>test</scope>
+    </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
-        </dependency>
-    </dependencies>
+  </dependencies>
+  <build>
+    <finalName>maven-unit-test</finalName>
+    <plugins>
 
-    <distributionManagement>
-        <repository>
-            <id>packagecloud-avaeroh</id>
-            <url>packagecloud+https://packagecloud.io/avaeroh/core</url>
-        </repository>
-        <snapshotRepository>
-            <id>packagecloud-avaeroh</id>
-            <url>packagecloud+https://packagecloud.io/avaeroh/core</url>
-        </snapshotRepository>
-    </distributionManagement>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+      </plugin>
 
-    <build>
-        <extensions>
-            <extension>
-                <groupId>io.packagecloud.maven.wagon</groupId>
-                <artifactId>maven-packagecloud-wagon</artifactId>
-                <version>0.0.4</version>
-            </extension>
-        </extensions>
-    </build>
-
+    </plugins>
+  </build>
 </project>
