--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,17 @@
 # https://circleci.com/docs/2.0/sample-config/
 # https://circleci.com/docs/2.0/language-java-maven/
-version:                 2.1
-# jobs:
+version:                 2
+jobs:
   build:
-     working_directory:  ~/avaeroh.github.io/tests/UI # directory where steps will run
-
+     # working_directory:  ~/avaeroh.github.io/tests/UI # directory where steps will run
      docker:
        - image:          testcafe/testcafe
      steps:
        - checkout
-       - run:          testcafe chrome tests/UI/tests.js
-
-
-
+       - run:            testcafe chrome tests/UI/tests.js
+       
   test:
-     working_directory:  ~/avaeroh.github.io/tests/API # directory where steps will run
-
+     # working_directory:  ~/avaeroh.github.io/tests/API # directory where steps will run
      docker:
        - image:          circleci/openjdk:8-jdk-stretch
 
@@ -27,8 +23,8 @@ version:                 2.1
 
 
 workflows:
-  version:             2.1
-  test:
+  version:               2
+  build_and_test:
     jobs:
       - build
       - test
