--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,15 @@ jobs:
      # working_directory:  ~/avaeroh.github.io/tests/UI # directory where steps will run
      docker:
        - image:          testcafe/testcafe
+       - image:          circleci/openjdk:8-jdk-stretch
+
      steps:
        - checkout
        - run:            testcafe chrome tests/UI/tests.js
-       
+       - run:            mvn -f ./tests/API clean verify
+       - run:            mvn -f ./tests/API test
+
+
   test:
      # working_directory:  ~/avaeroh.github.io/tests/API # directory where steps will run
      docker:
