--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,13 @@ jobs:
 
 
 workflows:
-  version:               2
+  version: 2
   build_and_test:
     jobs:
       - build
-      - test
-        requires:
-          - build
+      - test:
+          requires:
+            - build
 
 
 
