--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,12 @@ jobs:
   build:
      # working_directory: ~/avaeroh.github.io/tests/UI # directory where steps will run
      docker:
+        - image:
         - image:    testcafe/testcafe
 
      steps:
        - checkout
-       - run:      testcafe chrome tests/UI/tests.js
+       - run:      testcafe chromium tests/UI/tests.js
 
   test:
      # working_directory: ~/avaeroh.github.io/tests/API # directory where steps will run
