--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
 
      steps:
        - checkout
-       - run:      testcafe chromium tests/UI/tests.js
+       - run:      testcafe chromium:headless tests/UI/tests.js
 
   test:
      # working_directory: ~/avaeroh.github.io/tests/API # directory where steps will run
